# wayland-core

./: .gate.sh  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASING.md  deny.toml  justfile  release-please-config.json
.cargo/: audit.toml
.config/: nextest.toml
.github/: copilot-instructions.md  osv-scanner.toml
.github/workflows/: bench-regression.yml  ci.yml  mutants-nightly.yml  nightly-windows-soak.yml  release.yml
.planning/: .gitignore  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  frontier-ingest-manifest.yaml  inbox-ingest-manifest.yaml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/exports/: 2026-07-20-CLAUDE-FULL-PROGRAM-TRANSFER.md  2026-07-20-CLAUDE-TRANSFER.md
.planning/inbox/: MASTER-HANDOFF-frontier-v2-PROGRAM.md  MASTER-HANDOFF-phase20-native-parity.md  native-uat-repair-BRIEF.md
.planning/intel/: COMPETITIVE-LEDGER.md  DESKTOP-PROTOCOL-CHECKPOINT.md  FIELD-REGRESSIONS.md  INGEST-CONFLICTS.md  PLAN-V2-ADVISORY.md  SYNTHESIS.md  constraints.md  context.md
.planning/onboarding/: SUMMARY.md
.planning/scripts/: task-base-authority.mjs  test-phase20-proof-scripts.sh  verify-f20-03-scope.sh  verify-review-pair.sh  verify-review-result.mjs  verify-task-scope.sh
.superpowers/sdd/: os-deny-progress.md
crates/wayland-browser/: Cargo.toml  plugin.toml
crates/wayland-cua/: Cargo.toml  plugin.toml
crates/wayland-honcho/: Cargo.toml  plugin.toml
crates/wayland-ijfw/: Cargo.toml  README.md  plugin.toml
crates/wayland-ollama/: Cargo.toml  plugin.toml
crates/wcore-acp/: Cargo.toml
crates/wcore-agent/: Cargo.toml
crates/wcore-browser/: Cargo.toml
crates/wcore-budget/: Cargo.toml
crates/wcore-channel-discord/: Cargo.toml
crates/wcore-channel-email/: Cargo.toml
crates/wcore-channel-imessage/: Cargo.toml
crates/wcore-channel-matrix/: Cargo.toml
crates/wcore-channel-msteams/: Cargo.toml
crates/wcore-channel-msteams/src/: error.rs  lib.rs  token.rs
crates/wcore-channel-telegram/: Cargo.toml
crates/wcore-channels/: Cargo.toml
crates/wcore-cli/: Cargo.toml  build.rs
crates/wcore-config/: Cargo.toml
crates/wcore-cron/: Cargo.toml
crates/wcore-cua/: Cargo.toml
crates/wcore-dispatch/: Cargo.toml
crates/wcore-egress/: Cargo.toml
crates/wcore-eval-scenarios/: Cargo.toml  README.md  frontier-thresholds-v1.toml
crates/wcore-eval-scenarios/src/: artifact.rs  assertions.rs  capability_honesty.rs  catalog.rs  child_env.rs  cost.rs  cross_session.rs  egress_evidence.rs  filesystem_evidence.rs  hook_scenarios.rs  judge.rs  lib.rs  mcp_scenarios.rs  personas.rs  process_tree.rs  protocol_scenarios.rs  providers.rs  pty_capture.rs  receipt.rs  receipt_policy.rs  redaction.rs  report.rs  runner.rs  scenario.rs  stderr_capture.rs  tempenv.rs  trace.rs  usability.rs  workspace_evidence.rs
crates/wcore-eval-scenarios/src/fixtures/: manifest.rs  mcp.rs  mod.rs  openai.rs  remote_execution.rs  remote_execution_error.rs  repository.rs
crates/wcore-eval-scenarios/tests/: catalog_cli.rs  cross_session_live.rs  driver_cli.rs  fixture_manifest_contract.rs  live_personas.rs  mcp_fixture_contract.rs  openai_fixture_contract.rs  packaged_driver_gate.rs  platform_planning.rs  pty_tui_smoke.rs  receipt_contract.rs  remote_execution_fixture_contract.rs  report_contract.rs  repository_fixture_contract.rs  runner_contracts.rs  runner_cost_capture.rs  smoke.rs
crates/wcore-eval-scenarios/tests/fixtures/: mock_mcp_server.py
crates/wcore-fixture-harness/: Cargo.toml
crates/wcore-honcho-adapter/: Cargo.toml
crates/wcore-mcp/: Cargo.toml
crates/wcore-memory/: Cargo.toml
crates/wcore-observability/: Cargo.toml
crates/wcore-permissions/: Cargo.toml
crates/wcore-plugin-api/: Cargo.toml
crates/wcore-plugin-subprocess/: Cargo.toml
crates/wcore-plugin-wasm/: Cargo.toml
crates/wcore-pricing/: Cargo.toml  pricing.toml
crates/wcore-protocol/: Cargo.toml
crates/wcore-providers/: Cargo.toml
crates/wcore-replay/: Cargo.toml
crates/wcore-repomap/: Cargo.toml  README.md
crates/wcore-safety/: Cargo.toml
crates/wcore-sandbox/: Cargo.toml
crates/wcore-skills/: Cargo.toml
crates/wcore-skills/src/: bundled_supplemental_tests.rs  conditional_supplemental_tests.rs  context_modifier.rs  discovery.rs  discovery_supplemental_tests.rs  draft.rs  executor.rs  frontmatter.rs  hooks.rs  integration_tests.rs  loader.rs  loader_supplemental_tests.rs  loader_tests.rs  paths.rs  permissions.rs  permissions_supplemental_tests.rs  prompt.rs  refs.rs  shell.rs  substitution.rs  types.rs  watcher.rs
crates/wcore-skills/src/bundled/: bundled_tests.rs  hello.rs  mod.rs
crates/wcore-skills/tests/: audit_e2e.rs  curator_session_end.rs  draft_pattern_detector.rs  load_catalog.rs  prioritizer_session_start_test.rs  w9_acceptance.rs  wayland_home_auto_skill_loop.rs
crates/wcore-swarm/: Cargo.toml
crates/wcore-tools/: Cargo.toml  NOTES.md
crates/wcore-types/: Cargo.toml
crates/wcore-user-model/: Cargo.toml
docs/: README.md  advanced.md  architecture.md  cost-governance.md  crucible.md  e2e.md  evidence-receipts.md  getting-started.md  json-stream-protocol.md  marketplace-format.md  mcp.md  memory.md  plugin-authors.md  profiles.md  providers.md  skills.md  tools.md  troubleshooting.md  wcore-evolve.md  workflows.md
docs/cli-tui-redesign/: AUDIT.md  PLAN.md  WAVE2-NOTES.md  build-estimate.md  mockup.html  ux-krug-sutherland.md
examples/plugin-subprocess-mcp/: README.md  (+1 more)
npm/: README.md  generate.mjs
scripts/: _gen_w10a_corpus.sh  do.env.example  engine-rebrand.ts  f11-proof.py  f20-native-macos-proof.sh  f20-native-uat-proof.mjs  f20-native-uat-proof.test.mjs  f20-native-windows-proof.ps1  smoke.sh  wayland-e2e-real-workload.sh  wayland-e2e-smoke.sh  wayland-e2e-windows-soak.ps1
tests/: engine_test.rs  json_stream_approval_test.rs  orchestration_test.rs  provider_anthropic_test.rs  provider_openai_test.rs  skills_e2e.rs  spawn_test.rs
(+1279 files in other folders)
