[package]
name = "wcore-channel-msteams"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Microsoft Teams channel adapter for Wayland-Core — Bot Framework OAuth2 + Connector REST (send-only MVP; inbound webhook deferred to v0.8.3)"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
wcore-egress = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
toml = { workspace = true }
tracing = { workspace = true }

wcore-channels = { workspace = true }
wcore-config = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
